tests/error/typedef_func_tmpl_types.gw
#! [contains] pre-defined types
typedef void t_ptr<~A~>();

var <~int~>t_ptr iptr;

fun void test<~A~>() {
  var A a;
  <<< __func__, " ", a>>>;
}

test @=> iptr;
#!<<< iptr<~int~>() >>>;
<<< iptr() >>>;
<<< iptr<~int~>() >>>;
<<< iptr<~float~>() >>>;
<<< iptr<~Object~>() >>>;
